<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/OrangeColour"
    app:bbn_badgeColor="#FFFF0000"
    app:bbn_rippleColor="#3D3A38"
    >

    <item
        android:id="@+id/explore"
        android:onClick="setHome"
        android:icon="@drawable/ic_explore"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/destinations"
        android:icon="@drawable/ic_loc"
        android:title="@string/title_destinations" />

    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/bookings"
        android:icon="@drawable/ic_list_klook"
        android:title="@string/title_bookings" />

    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_person"
        android:title="@string/title_account" />

</menu>
